# customer-service-scheduling-bot

./: .env.example  AGENTS.md  README.md  golden_dataset.json  main.py  pyproject.toml
app/agents/: booking_agent.py  coordinator.py  faq_agent.py  graph.py  llm_factory.py  reception_agent.py  state.py  utils.py
app/database/: engine.py  models.py
app/prompts/: CHANGELOG.md  README.md  __init__.py  booking.py  config.py  coordinator.py  escalation.py  faq.py  global_prompt.py  prompts.py  reception.py  utils.py
app/services/: appointment_service.py  customer_service.py  faq_service.py  qualification_service.py
app/tools/: appointment_tools.py  customer_tools.py  faq_tools.py  qualification_tools.py
app/ui/: __init__.py  application.py  view_models.py
knowledge/: faq.md
knowledge/legacy-prompt/: prompt-agent-agendamento-230426.md
notebooks/: prompt_evaluation.ipynb  test_business_logic.ipynb  test_rag.ipynb
scripts/: create_dataset.py  create_notebook.py  ingest.py  init_db.py  register_scorers.py  run_evaluation.py  run_ui.py  test_command.py  test_m5_agents.py  test_prompts.py  test_tools.py
seed-data/: README.md  appointments.csv  availability_slots.csv  contacts.csv  doctor_specialties.csv  doctors.csv  patients.csv  reservations.csv  services.csv
tests/: conftest.py  test_imports.py
tests/database/: test_database.py
tests/tools/: test_appointment_tools.py  test_customer_tools.py  test_faq_tools.py  test_qualification_tools.py
ui/: chat.py
